--- a/today.html
+++ b/today.html
@@ -1,7 +1,64 @@
 <html>
     <head>
     </head>
+    
     <body>
-        Hello World
+        <h1>Today Window</h1>
+        <div id="list"></div>
     </body>
-</html>
+
+    <script>
+        const electron = require("electron");
+        const {ipcRenderer} = electron;
+        ipcRenderer.send("appointment:request:today");
+
+        ipcRenderer.on("appointment:request:today", (event, appointments) => {
+            const listDiv = document.getElementById("List");
+            appointments.forEach(appointment => {
+            const appointmentDiv = document.createElement("div");
+            const nameParagraph = document.createElement("p");
+            nameParagraph.innerHTML = `Name: ${appointment.name}`;
+
+            const numberParagraph = document.createElement("p");
+            numberParagraph.innerHTML = `Phone Number: ${appointment.number}`;
+
+            const dateParagraph = document.createElement("p");
+            dateParagraph.innerHTML = `Date: ${appointment.date}`;
+
+            const hourParagraph = document.createElement("p");
+            hourParagraph.innerHTML = `Hour: ${appointment.hour}`;
+
+            const symptomsParagraph = document.createElement("p");
+            symptomsParagraph.innerHTML = `Symptoms: ${appointment.symptoms}`;
+
+            const doneParagraph = document.createElement("p");
+            doneParagraph.innerHTML = `Done: ${appointment.done ? "Yes" : "No"}`;
+
+
+            const doneButton = document.createElement("Button");
+            doneButton.innerHTML = "Done";
+            doneButton.disable = appointment.done ? true : false
+            doneButton.onclick = ()  => done(appointment.id);
+
+            const hr = document.createElement("hr");
+
+            appointmentDiv.appendChild(nameParagraph);
+            appointmentDiv.appendChild(numberParagraph);
+            appointmentDiv.appendChild(dateParagraph);
+            appointmentDiv.appendChild(hourParagraph);
+            appointmentDiv.appendChild(symptomsParagraph);
+            appointmentDiv.appendChild(doneParagraph);
+            appointmentDiv.appendChild(doneButton);
+            appointmentDiv.appendChild(hr);
+
+            listDiv.append(appointmentDiv);
+
+            });
+        });
+        const done = id => {
+            ipcRenderer.send("appointment:done", id);
+        };
+
+    </script>
+
+</html>   
