Tugas Video Part 6 dan 7

--- a/create.html
+++ b/create.html
@@ -1,6 +1,4 @@
 <html>
-    <head>
-    </head>
     <body>
         <h3>Create Appointment</h3>
             <form id="form">
@@ -12,8 +10,8 @@
                 <input type="date" name="date" placeholder="YYYY-MM-DD" required /><br /><br />
                 <label for="hour">Hour:</label><br />
                 <input type="text" name="hour" placeholder="hh:mm" required /><br /><br />
-                <label for="Symtoms">Symtoms:</label><br />
-                <textarea type="text" name="Symtoms" required></textarea><br /><br />
+                <label for="Symptoms">Symptoms:</label><br />
+                <textarea type="text" name="Symptoms" required></textarea><br /><br />
                 <input type="submit" />
             </form>
 
