--- a/list.html
+++ b/list.html
@@ -9,13 +9,17 @@
 
     <script>
         const electron = require("electron");
-        const {ipcRenderer} = electron;
+        const {
+            ipcRenderer
+        } = electron;
+        
         ipcRenderer.send("appointment:request:list");
 
-        ipcRenderer.on("appointment:request:list", (event, appointments) => {
-            const listDiv = document.getElementById("List");
+        ipcRenderer.on("appointment:response:list", (event, appointments) => {
+            const listDiv = document.getElementById("list");
             appointments.forEach(appointment => {
             const appointmentDiv = document.createElement("div");
+
             const nameParagraph = document.createElement("p");
             nameParagraph.innerHTML = `Name: ${appointment.name}`;
 
@@ -50,4 +54,4 @@
         });
     </script>
 
-</html>   
+</html>
